# sk-reporter

./: .dockerignore  .gitignore  AGENTS.md  Aptfile  CLEANUP_PLAN.md  Dockerfile  README.md  RUN_SERVER.md  analyze_doc.py  apply_template_layout.py  companies.py  docx_normalize.py  extracted_reports.txt  nixpacks.toml  pyproject.toml  requirements.txt  Геодезический  дубль-контроль Лестех от 26.04.26 Бадаев В.Б.__К1.docx  Ежедневный отчет (ЮНС) от 26.04.2026 г. (БКНС-4) Пряхин И.Н..docx  Ежедневный отчет (ЮНС) от 26.04.2026 г. (Ш 84 - УПСВ) Пряхин И.Н.
agent/: README.md  __init__.py  check_agent.py  extract_agent.py  inject_agent.py  leader_ai_agent.py  leader_switcher.py  normalizer.py  ocr_agent.py  pipeline.py  report_parser.py  requirements.txt  verifier.py
archive/: README.md
data/: README.md
docs/: DATA_TEMPLATES.md  PROJECT_CONTEXT.md  RUN_SERVER.md  memory.md  planning_deployment.md  ДЛЯ_СОТРУДНИКОВ.md
engineer/: README.md
launcher/: SK-Reporter.bat  office-git-update.bat
scripts/: build_engineer_data.py  build_otkk_data.py  diagnose_docx.py  git-pull-office.ps1  import_core_xlsx.py  import_otkk_doc.py  import_otkk_manifest.py  import_personnel_db.py  import_personnel_xlsx.py  purge_empty_otkk.py  rebuild_bolvanki.py  run-server.ps1  seed_otkk1.py  seed_otkk2.py  setup.ps1  setup.sh  test_llm_client.py  test_normative_store.py  test_techexpert.py
sk_reporter/: __init__.py  appendix7_store.py  companies.py  contractor_db.py  core_import.py  core_xlsx.py  deployment_store.py  docx_processing.py  leader_switch.py  llm_client.py  luvr_store.py  otkk1_data.py  otkk2_data.py  otkk2_segments.json  (+24 more)
(+201 files in other folders)
