[project]
name = "sk-reporter"
version = "0.2.0"
description = "Объединение ежедневных отчётов строительного контроля"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
    "python-docx==1.1.2",
    "lxml==5.3.0",
    "mammoth==1.8.0",
    "ollama==0.4.7",
    "requests==2.32.3",
]

[project.scripts]
sk-reporter-fix-layout = "sk_reporter.template_layout:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sk_reporter*"]
